Fixing more spacing issues.

--- a/2013/sass/_base/_grid.scss
+++ b/2013/sass/_base/_grid.scss
@@ -9,7 +9,7 @@
 // grid unit base
 .g {
   position:relative;
-  padding: 0 ($grid-gutter / 2);
+  padding: 0 .75em;
   float:left;
 }
 .g_last-child {
