--- a/2013/stylesheets/screen.css
+++ b/2013/stylesheets/screen.css
@@ -169,7 +169,7 @@ html {
 /* line 10, ../sass/_base/_grid.scss */
 .g, .nav_tabs_full .nav__item {
   position: relative;
-  padding: 0 0.75;
+  padding: 0 .75em;
   float: left;
 }
 
@@ -486,9 +486,9 @@ html {
 /* line 99, ../sass/_base/_grid.scss */
 .g_columns {
   -moz-column-count: 2;
-  -moz-column-gap: 1.5;
+  -moz-column-gap: 1.5em;
   -webkit-column-count: 2;
-  -webkit-column-gap: 1.5;
+  -webkit-column-gap: 1.5em;
   -webkit-column-rule: 2px solid #ddd;
 }
 
@@ -3237,7 +3237,7 @@ Styleguide 2.2
 }
 /* line 98, ../sass/_modules/_media.scss */
 .media_speaker .media__block {
-  margin-right: 0.75;
+  margin-right: 0.75em;
 }
 /* line 104, ../sass/_modules/_media.scss */
 .media_speaker:last-child {
